# aarch32

./: Cargo.toml
.github/workflows/: build.yml
arm-targets/src/: lib.rs
cortex-a-rt/: Cargo.toml  link.x
cortex-a-rt/src/: lib.rs
cortex-ar/src/: asm.rs
cortex-r-a/: Cargo.toml  README.md
cortex-r-a-examples/: Cargo.toml
cortex-r-a-examples/src/: lib.rs
